<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="title">Restaurant Reservation</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="date_and_time">Date and Time</string>
    <string name="smoking">Smoking</string>
    <string name="non_smoking">Non-Smoking</string>
    <string name="reserve">RESERVE</string>
    <string name="reserved">RESERVED</string>
    <string name="clear">CLEAR</string>
    <string name="robster_roll">Robster Roll</string>
</resources>