<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/dividerReservation"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <ImageView
                android:id="@+id/imageViewFood"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/robster_roll"
                android:src="@drawable/robster_loll"
                tools:ignore="ImageContrastCheck" />

            <View
                android:id="@+id/dividerImage"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_black_outline"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textColorHint="#000000"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/custom_black_outline"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColorHint="#000000"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:id="@+id/dividerPhone"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/textViewDateandTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/date_and_time"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/dividerDate"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:timePickerMode="spinner" />

            <View
                android:id="@+id/dividerTime"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/toggleSmoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_outline"
                    android:fontFamily="cursive"
                    android:text="ToggleButton"
                    android:textOff="@string/non_smoking"
                    android:textOn="@string/smoking"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <View
                android:id="@+id/dividerSmoke"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_black_button"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:text="@string/reserve"
                    android:textStyle="bold|italic"
                    app:backgroundTint="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_black_button"
                    android:ems="10"
                    android:fontFamily="cursive"
                    android:text="@string/clear"
                    android:textStyle="bold|italic"
                    app:backgroundTint="#000000" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>